--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ runtimeLivedata = "1.6.7"
 coilCompose="2.1.0"
 accompanistGlide="1.0.0-beta01"
 coil="2.1.0"
+accompanistFlowlayout="0.24.13-rc"
 
 
 [libraries]
@@ -45,6 +46,7 @@ androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtim
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coilCompose" }
 coil = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
 accompanist-glide = { group = "com.github.bumptech.glide", name = "compose", version.ref = "accompanistGlide" }
+accompanist-flowlayout = { group = "com.google.accompanist", name = "accompanist-flowlayout", version.ref = "accompanistFlowlayout" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
